--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://jvannier.github.io",
+  "homepage": "http://lherna1371.github.io",
   "name": "react-deploy",
   "version": "0.1.0",
   "private": true,
